test session fix